# task_management_assignment

./: Dockerfile  abc.py  database.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
.github/: auto-merge-hotfix.yml
.github/workflows/: main.yml
project/: database.py  models.py  schemas.py
project/test/: test_main.py
test/: test_main.py
